MilestoneRFA_CM01/src/objects/RM_RFA_Project_Member__c.object
<CustomObject>
    <fields>
        <fullName>RM_Assignment_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFA_Project_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Expected_roles__c</fullName>
        <label>Expected roles</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Project_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project No</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>RFA Project Member</relationshipLabel>
        <relationshipName>RFA_Project_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_RFA_Approved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFA Approved</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipLabel>RFA Project Member</relationshipLabel>
        <relationshipName>RFA_Project_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Sub_Function__c</fullName>
        <label>Sub Function</label>
        <picklist>
            <picklistValues>
                <fullName>Account Payable Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development / Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development / Service Operations 1: CCCJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development / Service Operations 2: Tokyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development / Service Operations 3: Tone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development / Service Operations 4: Mikuni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development / Service Operations 5: CCEJP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Field Sales Chiba Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Field Sales Gunma Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Field Sales Ibaraki Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Field Sales Niigata Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Field Sales Saitama Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Field Sales Tochigi Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analysis and Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Planning and Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process / Relationship Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Process Management / Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Management &amp; Customer Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCCJ Audit Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCCMC Alignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center of Operational Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COGS &amp; Production Controllership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Drink Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RFA Project Member</label>
    <nameField>
        <displayFormat>RFA-Member-{0000000000}</displayFormat>
        <label>RFA_Project_Member名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>